fix: update Header navigation to reload on logout and login; adjust ListOfLeagues favorite icon comment; add overflow to CurrentMatch menu

--- a/src/pages/MatchDetails/CurrentMatch.module.scss
+++ b/src/pages/MatchDetails/CurrentMatch.module.scss
@@ -74,6 +74,7 @@
   &__menu {
     display: flex;
     width: 100%;
+    overflow: auto;
     justify-content: space-between;
     margin-bottom: 20px;
 
